--- a/index.html
+++ b/index.html
@@ -1,42 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-  <script src="https://d3js.org/d3.v5.js"></script>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <label for="grpahs">Choose a Graph:</label>
-
-<!-- <select name="graphs" id="graphs">
-  <option value="bar">Bar</option>
-  <option value="line">Line</option>
-  <option value="pie">Pie</option>
-  <option value="area">Area</option>
-  <option value="scatter">Scatter</option>
-</select> -->
-
-<form method="post">
-  <select id="dropdown" name="graphs" onchange="changeHiddenInput(this)">
-    <option value="bar">Bar</option>
-    <option value="line">Line</option>
-    <option value="pie">Pie</option>
-    <option value="area">Area</option>
-    <option value="scatter">Scatter</option>
-  </select>
-
-  <input type="hidden" name="hiddenInput" id="hiddenInput" value="" />
-
-  <button onclick="changeHiddenInput (objDropDown)" >Try it</button>
-</form>
-<div id="result"> </div>
-  <div id="chart-wrapper">
-    <canvas id="chart"></canvas>
-  </div>
-  <script src="chart.js"></script>
-</body>
-
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Bar Chart</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
+  <link rel="stylesheet" href="./styles.css">
+  </head>
+	<body>
+     
+        <div class="chart-container" >
+          <select name="chartType" id="chartType" onchange="updateChartType()">
+            <option value="bar">Bar</option>
+            <option value="line">Line</option>
+            <option value="pie">Pie</option>
+            <option value="radar">Radar</option>
+            <option value="polarArea">Polar Area</option>
+          </select> 
+            <canvas id="my_Chart" style="position: relative; width:100px; height:100px"></canvas>
+        </div>
+		
+		<script>
+			// Data define for bar chart
+			var myData = {
+				labels: ["Javascript", "Java", "Python", "PHP", "C++", "TypeScript", "Linux Shell","C","Ruby on Rails"],
+				datasets: [{
+					label: "Languages",
+					fill: false,
+					backgroundColor: ['#ff0000', '#ff4000', '#ff8000', '#ffbf00', '#ffbf00', '#ffff00', '#bfff00', '#80ff00', '#40ff00', '#00ff00'],
+					borderColor: 'black',
+					data: [85, 60,70, 50, 18, 20, 45, 30, 20],
+				}]
+			};
+			
+			// Code to drow Chart
+            // Default chart defined with type: 'bar'
+			var ctx = document.getElementById('my_Chart').getContext('2d');
+			var myChart = new Chart(ctx, {
+				type: 'bar',    	// Define chart type
+				data: myData    	// Chart data
+			});
+			
+			// Function runs on chart type select update
+            
+			function updateChartType() {
+                // Destroy the previous chart
+				myChart.destroy();
+                // Draw a new chart on the basic of dropdown
+				myChart = new Chart(ctx, {
+					type: document.getElementById("chartType").value,  // Select chart type from dropdown
+					data: myData
+				});
+			};
+		</script>
+	</body>
 </html>
